<resources>
    <string name="app_name">ToDo Lists</string>
    <string name="title">Title*</string>
    <string name="description">Description</string>
    <string name="txtPriority">Priority</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="duedate">Due Date</string>
    <string name="duetime">Due Time</string>
    <string name="reminder">Reminder</string>
    <string name="date_picker_title">Select a date</string>
    <string name="time_picker_title">Select a time</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="required">*Required</string>
    <string name="time_string">%1$s : %2$s</string>
    <string name="title_activity_main">ToDo Lists</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="title_required">Title cannot be empty</string>
    <string name="insertion_ok">Task created successfully</string>
    <string name="header_title">Header title</string>
    <string name="header_text">Header text</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_edit_task_fragment_title">Add or edit task</string>
    <string name="fav_tasks">Favourite Tasks</string>
    <string name="high_tasks">High Priority Tasks</string>
    <string name="low_tasks">Low Priority Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_category">Create new category</string>
    <string name="add_edit_category_fragment_title">Add or Edit Category</string>
    <string name="insertion_cat_ok">Category created successfully</string>
    <string name="manage_categories">Manage categories</string>
    <string name="favourite_tasks">Favourite Tasks</string>
    <string name="high_priority_tasks">High Priority Tasks</string>
    <string name="low_priority_tasks">Low Priority Tasks</string>


</resources>